--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,36 +10,20 @@
       </a>
     </li>
       <li class="nav-item" [routerLinkActive] = "['active']">
-        <a class="nav-link" [routerLink] = "['areaSingleDragable']"
+        <a class="nav-link" [routerLink] = "['lineChart']"
            style ="padding: 5px 5px 5px 5px">
-          <div style="text-align: center">Question 1</div>
+          <div style="text-align: center">slow runLine</div>
           <img src="../assets/images/firstQuestion.PNG"
                class="navImg"/>
         </a>
       </li>
       <li class="nav-item" [routerLinkActive] = "['active']">
-        <a class="nav-link" [routerLink] = "['lineChart']"
+        <a class="nav-link" [routerLink] = "['differentDatasets']"
            style ="padding: 5px 5px 5px 5px">
-          <div style="text-align: center">Question 2</div>
-          <img src="../assets/images/secondQuestion.PNG"
+          <div style="text-align: center">Different datasets</div>
+          <img src="../assets/images/firstQuestion.PNG"
                class="navImg"/>
         </a>
       </li>
-      <li class="nav-item" [routerLinkActive] = "['active']">
-        <a class="nav-link" [routerLink] = "['treadlines']"
-           style ="padding: 5px 5px 5px 5px">
-          <div style="text-align: center">Question 3</div>
-          <img src="../assets/images/curve.PNG"
-               class="navImg"/>
-        </a>
-      </li>
-      <li class="nav-item" [routerLinkActive] = "['active']">
-          <a class="nav-link" [routerLink] = "['invisibleDataset']"
-             style ="padding: 5px 5px 5px 5px">
-            <div style="text-align: center">Question 4</div>
-            <img src="../assets/images/fourthQuestion.PNG"
-                 class="navImg"/>
-          </a>
-        </li>
   </ul>
 </nav>
